/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}
plugins {
    id 'java'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:31.1-jre'
    // https://mvnrepository.com/artifact/org.apache.poi/poi
    implementation 'org.apache.poi:poi:5.2.3'
    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    // https://mvnrepository.com/artifact/org.antlr/antlr4-runtime
    implementation 'org.antlr:antlr4-runtime:4.13.1'
    // https://mvnrepository.com/artifact/com.fizzed/rocker-runtime
    implementation 'com.fizzed:rocker-runtime:1.3.0'
    // https://mvnrepository.com/artifact/org.dhatim/fastexcel-reader
    implementation 'org.dhatim:fastexcel-reader:0.15.7'
    // https://mvnrepository.com/artifact/de.siegmar/fastcsv
    implementation 'de.siegmar:fastcsv:2.2.2'
//    implementation 'com.alibaba:easyexcel:3.3.2'
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview"]
    options.encoding = "UTF-8"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}

run {
    jvmArgs += ['--enable-preview']
}

application {
    // Define the main class for the application.
    mainClass = 'configgen.Main'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
